# DocumentExplorer

./: .env  .gitignore  http_cache.sqlite  main.py  pyproject.toml  webcache.sqlite
data/: transciptapi_summary.csv  transciptapi_text.csv  user_playlist_docs.csv  ytdlp_summary.csv  ytdlp_text.csv  yxF9TGhWPMc_transciptapi_fulltext.csv  yxF9TGhWPMc_transciptapi_summary.csv
src/: main.py
src/utils/: config.py  helpers.py  logger.py  md_writer.py  scrapper.py  text_pipeline.py
